--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,13 +9,13 @@
           <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"> Features </a>
+          <a class="nav-link" href="#"> Life </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"> Pricing </a>
+          <a class="nav-link" href="#"> Coding </a>
         </li>
       </ul>
       <span class="navbar-text">
-        Navbar text with an inline element
+      
       </span>
     </div>
