--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,21 +1,38 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar w/ text</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> Life </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> Coding </a>
-        </li>
-      </ul>
-      <span class="navbar-text">
-      
-      </span>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+  <a class="navbar-brand" href="/">Pitch It Up</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/categories/life">Life</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/categories/coding">Coding</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/categories/funny">Funny</a>
+      </li>
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+      {% if current_user.is_authenticated %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('main.profile',uname=current_user.author)}}">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('auth.logout')}}">Sign out</a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('auth.login')}}">Sign in</a>
+      </li>
+      {%endif%}
+    </ul>
+  </div>
+</nav>
