--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -1,29 +1,38 @@
+{% extends 'base.html'%}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block styles%} {{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/categories.css')}}"> {% endblock %}
+<br>
+<br>
 <br>
 <br>
 
 <body>
+  {% block content %}
   <br>
   <br>
-  <h1 align="center" class="text-uppercase">{{cat}} NEWS </h3>
-    <div class="container">
-      <div class="card-columns">
-        {% for category in category %}
+  <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
+  <div class="container">
+    <div class="card-columns">
+      {% for category in category[::-1] %}
 
-        <div class="card">
-          <img class="card" src="{{category.image}}" alt="Card image cap" size="100px180">
-          <div class="card-body">
-            <h5 class="card-title">{{category.author}}</h5>
-            <p class="card-text">{{category.description}}</p>
-            <a href="{{category.url}}">
-              <p class="card-text">Click here for more details!</p>
-            </a>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Publish date:{{category.time}}</small>
-          </div>
+      <div class="card bg-transparent border-success">
+        <div class="card-header bg-transparent border-success">
+          {{category.title}}
         </div>
-        {% endfor %}
+        <div class="card-body text">
+          <blockquote class="blockquote mb-0">
+            <p>{{category.pitch}}</p><br>
+            <footer class="blockquote-footer bg-transparent border-success">{{category.author}}
+              <br><cite title="Source Title">Publish date: {{category.date.strftime('%Y-%m-%d')}}</cite></footer>
+          </blockquote>
+        </div>
+        <div class="card-footer bg-transparent border-success">
+          <button type="button" class="btn btn-outline-success btn-sm"><a href="/new_comment/{{category.id}}">Comment</a></button> <button type="button" class="btn btn-outline-success btn-sm"><a href="/comments/{{category.id}}">View comments</a></button></div>
       </div>
+
+      {% endfor %}
+      
     </div>
     {% endblock %}
-  </body>
+</body>
